[package]
name = "joku"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
ssdp-client = "2.0.0"
futures-util = "0.3.28"
inquire = "0.6.2"
quick-xml = { version = "0.30.0" }
basic-toml = "0.1.4"
